--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,10 @@ name = "pypi"
 
 [dev-packages]
 flake8 = "==6.0.0"
+autopep8 = "==2.0.2"
+isort = "==5.12.0"
 pytest = "==7.2.2"
-pytest-cov = "4.0.0"
+pytest-cov = "==4.0.0"
 
 [requires]
 python_version = "3.11"
