--- a/project.env
+++ b/project.env
@@ -1,7 +1,11 @@
 #! /usr/bin/env bash
 
+set -u
+
 is_var_set () {
-    if [[ -z "${!1:-}" ]]; then
+    local -r var_name="$1"
+    local -r def_value="${2:-_}"
+    if [[ "${!var_name:-${def_value}}" == "${def_value}" ]]; then
         return 1
     fi
     return 0
@@ -14,8 +18,7 @@ is_var_set vars || declare -a vars=(
 
 # shellcheck disable=SC2034
 is_var_set sources_dirs || declare -ar sources_dirs=(
-    "mydict"
-    "myexec"
+    "."
 )
 
 # shellcheck disable=SC2034
@@ -31,7 +34,7 @@ is_var_set coveragerc_xml_report_filename || declare -r coveragerc_xml_report_fi
 is_var_set coveragerc_html_report_dirname || declare -r coveragerc_html_report_dirname="./htmlcov"
 
 print_var () {
-    local var_name="$1"
+    local -r var_name="$1"
     printf "var %s = '%s'\n" "${var_name}" "${!var_name}"
 }
 
