Fix variable names is coverage script ('run_coverage.sh')

--- a/project.env
+++ b/project.env
@@ -22,16 +22,16 @@ is_var_set sources_dirs || declare -ar sources_dirs=(
 )
 
 # shellcheck disable=SC2034
-is_var_set coveragerc_filename || declare -r coveragerc_filename="./.coveragerc"
+is_var_set coverage_config_filename || declare -r coverage_config_filename="./.coveragerc"
 
 # shellcheck disable=SC2034
-is_var_set coveragerc_report_filename || declare -r coveragerc_report_filename="./.coverage"
+is_var_set coverage_report_filename || declare -r coverage_report_filename="./.coverage"
 
 # shellcheck disable=SC2034
-is_var_set coveragerc_xml_report_filename || declare -r coveragerc_xml_report_filename="./coverage.xml"
+is_var_set coverage_xml_report_filename || declare -r coverage_xml_report_filename="./coverage.xml"
 
 # shellcheck disable=SC2034
-is_var_set coveragerc_html_report_dirname || declare -r coveragerc_html_report_dirname="./htmlcov"
+is_var_set coverage_html_report_dirname || declare -r coverage_html_report_dirname="./htmlcov"
 
 print_var () {
     local -r var_name="$1"
