Add 'myobj' class and pytest fix

--- a/project.env
+++ b/project.env
@@ -22,6 +22,12 @@ is_var_set sources_dirs || declare -ar sources_dirs=(
 )
 
 # shellcheck disable=SC2034
+is_var_set test_junit_filename || declare -r test_junit_filename="./junit.result.xml"
+
+# shellcheck disable=SC2034
+is_var_set coverage_junit_filename || declare -r coverage_junit_filename="./junit.coverage.xml"
+
+# shellcheck disable=SC2034
 is_var_set coverage_config_filename || declare -r coverage_config_filename="./.coveragerc"
 
 # shellcheck disable=SC2034
