--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 **/tmp
 # Tests
 **/.pytest_cache
+**/result.xml
+**/junit.result.xml
 # Coverage
 **/.coverage
 **/htmlcov
 **/coverage.xml
+**/junit.coverage.xml
