--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ autopep8 = "==2.0.2"
 isort = "==5.12.0"
 pytest = "==7.2.2"
 pytest-cov = "==4.0.0"
+pycobertura = "==3.2.1"
 
 [requires]
 python_version = "3.11"
