--- a/Pipfile
+++ b/Pipfile
@@ -5,14 +5,17 @@ name = "pypi"
 
 [packages]
 pyyaml = "6.0.0"
+# poetry = "*"
+# pipenv-poetry-migrate = "*"
 
 [dev-packages]
 flake8 = "==6.0.0"
 autopep8 = "==2.0.2"
 isort = "==5.12.0"
+
 pytest = "==7.2.2"
 pytest-cov = "==4.0.0"
 pycobertura = "==3.2.1"
 
 [requires]
-python_version = "3.11"
+python_version = "3.12"
